--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,39 @@
-# Xcode
-build/*
-*.pbxuser
-!default.pbxuser
+# Mac OS X Finder and whatnot
+.DS_Store
+.*
+!/.gitignore
+
+# Sparkle distribution Private Key (Don't check me in!)
+dsa_priv.pem
+
+# XCode (and ancestors) per-user config (very noisy, and not relevant)
+*.mode1
 *.mode1v3
-!default.mode1v3
 *.mode2v3
-!default.mode2v3
+*.perspective
 *.perspectivev3
-!default.perspectivev3
-*.xcworkspace
-!default.xcworkspace
+*.pbxuser
 xcuserdata
-profile
-*.moved-aside
+*.xcuserdatad
+UserInterfaceState.*
+
+# Generated files
+VersionX-revision.h
+
+# build products
+build/
+*.[oa]
+
+# Other source repository archive directories (protects when importing)
+.hg
+.svn
+CVS
+
+# automatic backup files
+*~.nib
+*.swp
+*~
+*(Autosaved).rtfd/
+Backup[ ]of[ ]*.pages/
+Backup[ ]of[ ]*.key/
+Backup[ ]of[ ]*.numbers/
